--- a/fine-tune.ipynb
+++ b/fine-tune.ipynb
@@ -65,7 +65,7 @@
         "import matplotlib.pyplot as plt\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -80,39 +80,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ATvIX5JT7Xyx",
-        "outputId": "d6705246-b9ec-4f9a-9061-491a1dc4c752",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "# TODO: Remove after publication.\n",
-        "!gsutil cp gs://flowers-experimental/mixer/B_16_sam_fe.tar.gz .\n",
-        "!mkdir B_16_sam_fe\n",
-        "!tar xf B_16_sam_fe.tar.gz -C B_16_sam_fe"
-      ],
-      "execution_count": 3,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Copying gs://flowers-experimental/mixer/B_16_sam_fe.tar.gz...\n",
-            "- [1 files][209.2 MiB/209.2 MiB]                                                \n",
-            "Operation completed over 1 objects/209.2 MiB.                                    \n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "yZ0gsA41RVVM"
       },
       "source": [
         "def get_model(\n",
-        "    handle=\"B_16_sam_fe\", # TODO: Update after publication.\n",
+        "    handle=\"https://tfhub.dev/sayakpaul/mixer_b16_i1k_fe/1\", \n",
         "    num_classes=10,\n",
         "):\n",
         "    hub_layer = hub.KerasLayer(handle, trainable=True)\n",
@@ -127,22 +99,22 @@
         "\n",
         "    return model"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "jk5VZIafSxGv",
-        "outputId": "46cb9e39-7bc4-478d-e1b1-44fa29201c5d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "46cb9e39-7bc4-478d-e1b1-44fa29201c5d"
       },
       "source": [
         "get_model().summary()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -184,7 +156,7 @@
         "BATCH_SIZE = 64\n",
         "AUTO = tf.data.AUTOTUNE"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -223,7 +195,7 @@
         "\n",
         "    return dataset.map(preprocess, AUTO).batch(BATCH_SIZE).prefetch(AUTO)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -239,10 +211,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "lHJFUqFZE-0F",
-        "outputId": "e956944a-8220-4e2e-e2f7-7932aaab36f4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "e956944a-8220-4e2e-e2f7-7932aaab36f4"
       },
       "source": [
         "train_dataset, val_dataset = tfds.load(\n",
@@ -254,7 +226,7 @@
         "print(f\"Number of training examples: {num_train}\")\n",
         "print(f\"Number of validation examples: {num_val}\")"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +275,7 @@
         "train_dataset = make_dataset(train_dataset, True)\n",
         "val_dataset = make_dataset(val_dataset, False)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -319,11 +291,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "O8Ui5B8hGNXQ",
-        "outputId": "d7033cf3-b41d-408e-efa4-0db0ff306d76",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 575
-        }
+        },
+        "outputId": "d7033cf3-b41d-408e-efa4-0db0ff306d76"
       },
       "source": [
         "sample_images, _ = next(iter(train_dataset))\n",
@@ -335,7 +307,7 @@
         "    plt.axis(\"off\")\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -417,7 +389,7 @@
         "            step > self.total_steps, 0.0, learning_rate, name=\"learning_rate\"\n",
         "        )"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -440,10 +412,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "bgsWyyhgHAaB",
-        "outputId": "42025c80-e796-4dfa-d72b-73accda35477",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "42025c80-e796-4dfa-d72b-73accda35477"
       },
       "source": [
         "EPOCHS = 8\n",
@@ -454,7 +426,7 @@
         "\n",
         "print(TOTAL_STEPS)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,11 +441,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "LppzZVdbHwPE",
-        "outputId": "f95246e2-8952-45a8-c6be-ba19a3b112aa",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        }
+        },
+        "outputId": "f95246e2-8952-45a8-c6be-ba19a3b112aa"
       },
       "source": [
         "scheduled_lrs = WarmUpCosine(\n",
@@ -489,7 +461,7 @@
         "plt.ylabel(\"LR\", fontsize=14)\n",
         "plt.show()"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -523,7 +495,7 @@
         "optimizer = keras.optimizers.SGD(scheduled_lrs, clipnorm=1.0)\n",
         "loss = keras.losses.SparseCategoricalCrossentropy()"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -539,10 +511,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "wd5XVBMZJlu_",
-        "outputId": "26452009-ff96-49e5-b427-145b17da387e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "26452009-ff96-49e5-b427-145b17da387e"
       },
       "source": [
         "model = get_model()\n",
@@ -550,7 +522,7 @@
         "\n",
         "history = model.fit(train_dataset, validation_data=val_dataset, epochs=EPOCHS)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -580,11 +552,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "InPOQqfJK3gR",
-        "outputId": "7d3cc795-9e12-4ed2-eb57-01585f2f0514",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 428
-        }
+        },
+        "outputId": "7d3cc795-9e12-4ed2-eb57-01585f2f0514"
       },
       "source": [
         "plt.figure(figsize=(7, 7))\n",
@@ -598,7 +570,7 @@
         "plt.legend()\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
