--- a/classification.ipynb
+++ b/classification.ipynb
@@ -61,30 +61,7 @@
         "import numpy as np\n",
         "import requests"
       ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "olFce2AENIT_"
-      },
-      "source": [
-        "## Get the `SavedModel`"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WADuSwBgLA6H"
-      },
-      "source": [
-        "# TODO: Remove this when Hub models are published. \n",
-        "!gsutil cp gs://flowers-experimental/mixer/B_16_imagenet1k.tar.gz .\n",
-        "!mkdir B_16_imagenet1k\n",
-        "!tar xf B_16_imagenet1k.tar.gz -C B_16_imagenet1k"
-      ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -100,10 +77,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "HZZC3qJcLQyM",
-        "outputId": "809b37c3-9ac5-4bf6-a95c-e7e63364e137",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "809b37c3-9ac5-4bf6-a95c-e7e63364e137"
       },
       "source": [
         "def preprocess_image(image):\n",
@@ -121,7 +98,7 @@
         "\n",
         "!wget https://storage.googleapis.com/bit_models/ilsvrc2012_wordnet_lemmas.txt"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,11 +132,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "LPh1RSMXLdVD",
-        "outputId": "eccd3448-a6bf-4d1b-a9d2-eab1f53a03d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 269
-        }
+        },
+        "outputId": "eccd3448-a6bf-4d1b-a9d2-eab1f53a03d0"
       },
       "source": [
         "with open(\"ilsvrc2012_wordnet_lemmas.txt\", \"r\") as f:\n",
@@ -172,7 +149,7 @@
         "plt.imshow((image[0] + 1) / 2)\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -192,23 +169,23 @@
       "cell_type": "code",
       "metadata": {
         "id": "uOo3vYhqLu3Y",
-        "outputId": "d1fc076a-803c-4956-8779-d23b3cf395cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "d1fc076a-803c-4956-8779-d23b3cf395cd"
       },
       "source": [
-        "model_dir = \"B_16_imagenet1k\"\n",
+        "mobule_url = \"https://tfhub.dev/sayakpaul/mixer_b16_i1k_classification/1\"\n",
         "\n",
         "classification_model = tf.keras.Sequential(\n",
-        "    [hub.KerasLayer(model_dir)]\n",
-        ")  # TODO: Update when models are published.\n",
+        "    [hub.KerasLayer(mobule_url)]\n",
+        ")  \n",
         "predictions = classification_model.predict(image)\n",
         "predicted_label = imagenet_int_to_str[int(np.argmax(predictions))]\n",
         "predicted_label"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
